tests/ui/parser/fn-field-parse-error-ice.stderr
error: expected `,`, or `}`, found keyword `fn`
  --> $DIR/fn-field-parse-error-ice.rs:5:16
   |
LL |     inner : dyn fn ()
   |                ^ help: try adding a comma: `,`

error: expected identifier, found keyword `fn`
  --> $DIR/fn-field-parse-error-ice.rs:5:17
   |
LL | struct Baz {
   |        --- while parsing this struct
LL |     inner : dyn fn ()
   |                 ^^ expected identifier, found keyword
   |
help: escape `fn` to use it as an identifier
   |
LL |     inner : dyn r#fn ()
   |                 ++

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/fn-field-parse-error-ice.rs:5:13
   |
LL |     inner : dyn fn ()
   |             ^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0412`.
